--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 # platform: linux-64
 # python=3.7.3
 # pip install -r requirements.txt
+"""
+Platform: macOS arm64
+Package manager: miniforge3
+Python: 3.6.12
+"""
 numpy==1.18.2
 pandas==1.0.3
 scikit-learn==0.22.2.post1
@@ -8,3 +13,5 @@ torch==1.4.0
 torchvision==0.5.0
 tqdm==4.45.0
 transformers==2.7.0
+# used for cpu, ram usage. 
+psutils==5.9.1
